Prevent icons overflowing card containers on horizontal resize

--- a/style.css
+++ b/style.css
@@ -239,8 +239,6 @@ body {
   border: 7px solid var(--dirk);
 }
 
-
-
 .upper {
   grid-area: upper;
   align-self: end;
@@ -309,7 +307,7 @@ body {
 .cards-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-auto-rows: 200px;
+  grid-auto-rows: 215px;
   column-gap: 24px;
   row-gap: 32px;
 }
